force-app/main/default/objects/Secured_Field_Access_Log__c/Secured_Field_Access_Log__c.object-meta.xml
<CustomObject>
    <description>Secured Field Access Log</description>
    <label>Secured Field Access Log</label>
    <nameField>
        <displayFormat>L{0000000000}</displayFormat>
        <label>Secured Field Access Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secured Field Access Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>