force-app/main/default/objects/Secured_Field_Access_Log__c/fields/Logged_At__c.field-meta.xml
<CustomField>
    <fullName>Logged_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Logged At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>