force-app/main/default/objects/Secured_Field_Access_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Secured_Field_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>