force-app/main/default/objects/Secured_Field_Access_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Object_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Mode__c</columns>
    <columns>Logged_At__c</columns>
    <columns>Record_Id__c</columns>
    <columns>User__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>